# RustASR

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/asr-cli/: Cargo.toml
crates/asr-cli/src/: main.rs  speaker.rs  vad.rs
crates/asr-core/: Cargo.toml
crates/asr-core/src/: config.rs  debug.rs  error.rs  lib.rs  metal_utils.rs  model_files.rs  model_registry.rs  traits.rs  types.rs
crates/asr-engine/: Cargo.toml
crates/asr-engine/src/: engine.rs  lib.rs
crates/asr-pipeline/: Cargo.toml
crates/asr-pipeline/src/: lib.rs  output.rs  pipeline.rs  tokenizer.rs
crates/asr-pipeline/tests/: transcribe.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs  loader.rs  mel.rs  resample.rs
crates/audio/tests/: mel_verification.rs
crates/aut-encoder/: Cargo.toml
crates/aut-encoder/src/: config.rs  layers.rs  lib.rs  model.rs  position.rs
crates/aut-encoder/tests/: load_encoder.rs
crates/model-gigaam/: Cargo.toml
crates/model-gigaam/src/: config.rs  conformer.rs  ctc.rs  lib.rs  mel.rs  model.rs
crates/model-parakeet/: Cargo.toml
crates/model-parakeet/src/: config.rs  decoder.rs  encoder.rs  joint.rs  lib.rs  mel.rs  model.rs  tdt.rs
crates/model-qwen3/: Cargo.toml
crates/model-qwen3/src/: lib.rs  model.rs
crates/model-whisper/: Cargo.toml
crates/model-whisper/src/: decoder.rs  lib.rs  model.rs
crates/qwen3-decoder/: Cargo.toml
crates/qwen3-decoder/src/: cache.rs  config.rs  layers.rs  lib.rs  model.rs  projector.rs
crates/qwen3-decoder/tests/: load_decoder.rs
docs/: MULTI_MODEL_PRD.md  PHASE_1_INFRASTRUCTURE.md  PHASE_2_FEATURE_EXTRACTOR.md  PHASE_3_AUT_ENCODER.md  PHASE_4_INTEGRATION.md  PLAN.md  PRD.md  asr_quantization_1.7b.md  diarization.md  research_asr_architectures.md  research_fastconformer_tdt.md  transcribe_full_31118765_60s.md  transcribe_full_mp3.md
docs/tests/: SUMMARY.md  gigaam.md  gigaam_transcription.txt  parakeet.md  parakeet_transcription.txt  quantization.md  qwen3_0.6b.md  qwen3_0.6b_q4_0_transcription.txt  qwen3_0.6b_q8_0_transcription.txt  qwen3_1.7b_q4_0_transcription.txt  qwen3_1.7b_q6k_transcription.txt  whisper.md  whisper_transcription.txt
docs/transcriptions/full_31118765_60s/: hf_1.7b_auto.txt  rust_1.7b_fp_auto.txt  rust_1.7b_q8_ru.txt
docs/transcriptions/full_mp3/: full_0.6b_q4_0.txt  full_0.6b_q4_0_v2.txt  full_0.6b_q8_0.txt  full_1.7b_q4_0.txt  full_1.7b_q4_0_v2.txt  full_1.7b_q8_0.txt  reference_other_model.txt
docs/transcriptions/full_mp3/debug_60s/: 0.6b_q4_cpu.txt  0.6b_q4_metal.txt
docs/transcriptions/full_mp3/debug_60s/diarize_right_0.6b_q8_ru/: combined.txt  mic.txt  report.md  segments.json  system.txt
docs/transcriptions/full_mp3/debug_60s/diarize_right_1.7b_q4_ru/: combined.txt  mic.txt  report.md  segments.json  system.txt
docs/transcriptions/full_mp3/diarize_0.6b_q4/: combined.txt  mic.txt  report.md  segments.json  system.txt
docs/transcriptions/full_mp3/diarize_0.6b_q8/: combined.txt  report.md  segments.json  system.txt
docs/transcriptions/full_mp3/diarize_1.7b_q4/: combined.txt  mic.txt  report.md  segments.json  system.txt
docs/transcriptions/full_mp3/diarize_1.7b_q8/: combined.txt  mic.txt  report.md  segments.json  system.txt
docs/transcriptions/full_mp3/diarize_cluster_0.6b_q8/: combined.txt  report.md  segments.json  spk0.txt  spk1.txt
docs/transcriptions/full_mp3/diarize_rightk2_0.6b_q8/: combined.txt  mic.txt  report.md  segments.json  system-spk0.txt  system-spk1.txt
docs/transcriptions/full_mp3/diarize_ru_0.6b_q4/: combined.txt  mic.txt  report.md  segments.json  system.txt
docs/transcriptions/full_mp3/diarize_ru_0.6b_q8/: combined.txt  mic.txt  report.md  segments.json  system.txt
docs/transcriptions/full_mp3/diarize_ru_1.7b_q4/: combined.txt  mic.txt  report.md  segments.json  system.txt
docs/transcriptions/full_mp3/diarize_ru_1.7b_q8/: combined.txt  mic.txt  report.md  segments.json  system.txt
scripts/: analyze_joint.py  compare_lstm_joint.py  compare_mel.py  convert_gigaam.py  convert_parakeet.py  create_test_wav.py  debug_parakeet_subsampling.py  download_model.py  dump_python_features.py  extract_parakeet_tokenizer.py  full_encoder_comparison.py  full_pipeline_compare.py  generate_mel_reference.py  get_audio_embeds.py  inspect_parakeet.py  inspect_safetensors.py  save_reference_mel.py  test_nemo_parakeet.py  test_no_xscale.py  test_no_xscale_v2.py  test_python_transcribe.py  test_reflect_padding.py
tmp/diarize_gigaam/: combined.txt  report.md  segments.json  spk0.txt  spk1.txt
tmp/diarize_parakeet/: combined.txt  report.md  segments.json  spk0.txt
tmp/diarize_qwen3/: combined.txt  report.md  segments.json  spk0.txt  spk1.txt
tmp/diarize_whisper/: combined.txt  report.md  segments.json  spk0.txt  spk1.txt
tmp/hf_compare_31118765/: qwen_asr_transcribe.py
tmp/hf_compare_31118765/.venv312/: pyvenv.cfg
(+10 files in other folders)
