[package]
name = "model-parakeet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "NVIDIA Parakeet-TDT v3 — FastConformer + TDT транскрибер на чистом Rust (Candle)"

[dependencies]
# Внутренние крейты
asr-core.workspace = true

# ML бэкенд
candle-core.workspace = true
candle-nn.workspace = true
safetensors.workspace = true

# Сериализация
serde.workspace = true
serde_json.workspace = true

# Ошибки и логирование
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# FFT для mel-спектрограммы
rustfft.workspace = true
